Issue(fixed): hover card effect on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,9 +33,11 @@ a {
   letter-spacing: 5px;
 }
 
-#projects:hover>#card:not(:hover) {
-  opacity: 0.5;
-  transition: 0.2s;
+@media (min-width: 768px) {
+  #projects:hover>#card:not(:hover) {
+    opacity: 0.5;
+    transition: 0.2s;
+  }
 }
 
 /* @media (prefers-color-scheme: dark) {
